Bug 559613 - Reuse the rendering context for tab previews and drop the cache time to 5 seconds. r=robarnold,jimm sr=vlad a=blocking2.0